# spdatalab

./: .env.example  .gitattributes  .gitignore  AGENTS.md  BUILD_DATASET_OPTIMIZATION_README.md  DATABASE_CONNECTION_RULES.md  DATABASE_FIELDS_OPTIMIZATION.md  DEBUG_LOGGING_INFO.md  DEBUG_OBS_HOWTO.md  DEVELOPMENT_PLAN.md  EVENT_ID_TYPE_FIX.md  IMPLEMENTATION_SUMMARY.md  JSON_INPUT_IMPLEMENTATION_SUMMARY.md  Makefile  NEW_FIELDS_FEATURES.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  QUICK_FIX_README.md  QUICK_START_TEST.md  README.md  SCENE_IMAGE_VIEWER_TEST_COMMANDS.md  SPATIAL_JOIN_SOLUTION.md  TRAJECTORY_INTEGRATION_TEST_GUIDE.md  TRAJECTORY_INTEGRATION_TODOLIST.md  TRAJECTORY_LANE_ANALYSIS_PLAN.md  TRAJECTORY_TODO.md  check_database_status.py  cleanup_redundant_views.py  clear_cache.py  clear_polygon_tables.py  cursor_chat_8b3a795c4925f436fc09da11b26282a6_oct10.txt  cursor_chat_96665030c10a38ad7fb06c239f8221a4_sep19.txt  cursor_chat_e6ab6d327bb99402d3fbf76ba2d7ae84_current.txt  database_connection_diagnostic.py  database_setup_troubleshooting_guide.md  debug_event_id_type.py  debug_overlap_issue.py  debug_polygon_query.py  debug_segmentation.py  debug_table_creation.py  debug_test.py  (+99 more)
common/: config.py  io_hive.py  io_obs.py
data/: README.md
dataset/: ingest.py
docker/: Dockerfile  docker-compose.yml
docs/: README.md  analysis_workflow_guidelines.md  bbox_integration_guide.md  cli_usage_guide.md  config_improvements_summary.md  dataset_management.md  env_config_example.md  infrastructure_guide.md  integrated_trajectory_analysis_guide.md  issue_tickets_bbox_guide.md  (+34 more)
(+238 files in other folders)
