[project]
name = "spdatalab"
version = "0.1.0"
description = "Spatial‑Data‑Lab scaffold"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "click",
    "pandas",
    "geopandas", 
    "sqlalchemy",
    "psycopg[binary]",
    "python-dotenv",
    "requests",
    "shapely",
    "numpy",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pyarrow",
    "pytest",
]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
spdatalab = "spdatalab.cli:cli"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"